# brave-core

./: DEPS  Jenkinsfile  package-lock.json  package.json
android/: brave_java_sources.gni
app/: brave_generated_resources.grd  brave_main_delegate_browsertest.cc  brave_settings_strings.grdp  generated_resources.grd  settings_strings.grdp
browser/: about_flags.cc  brave_browser_main_parts.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  sources.gni
components/brave_tabs/: BUILD.gn  brave_tab_prefs.cc  brave_tab_prefs.h  pref_names.cc  pref_names.h
patches/: chrome-VERSION.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-importer-importer_uma.cc.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-browser-ui-tab_helpers.cc.patch  chrome-browser-ui-views-tabs-tab.cc.patch  chrome-browser-ui-views-tabs-tab_hover_card_bubble_view.cc.patch  chrome-browser-ui-views-tabs-tab_hover_card_controller.cc.patch  chrome-browser-ui-views-tabs-tab_strip.cc.patch  chrome-common-BUILD.gn.patch  chrome-common-importer-importer_type.h.patch  chrome-common-importer-profile_import_process_param_traits_macros.h.patch  chrome-renderer-chrome_content_renderer_client.cc.patch  chrome-test-BUILD.gn.patch  components-browser_ui-site_settings-android-java-src-org-chromium-components-browser_ui-site_settings-SiteSettingsDelegate.java.patch  ios-chrome-browser-browser_state-chrome_browser_state_impl.mm.patch  third_party-blink-public-mojom-permissions_policy-permissions_policy_feature.mojom.patch
test/: BUILD.gn
(+311 files in other folders)
