# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

source_set("brave_tabs") {
  sources = [
    "pref_names.cc",
    "pref_names.h",
  ]

  deps = [ "//base" ]
}
